--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,7 @@
-beautifulsoup
+beautifulsoup4==4.12.2
+fastapi==0.96.0
+jose==1.0.0
+pandas==2.0.2
+passlib==1.7.4
+pydantic==1.10.7
+Requests==2.31.0
