--- a/.github/workflows/main_mlinprod-obligatorio.yml
+++ b/.github/workflows/main_mlinprod-obligatorio.yml
@@ -22,15 +22,15 @@ jobs:
     - name: Log in to registry
       uses: docker/login-action@v2
       with:
-        registry: https://mcr.microsoft.com/
-        username: ${{ secrets.AzureAppService_ContainerUsername_ea93528504874be69c1d3312d2ab56e7 }}
-        password: ${{ secrets.AzureAppService_ContainerPassword_fb2844bbf1e5434ebf066855c1a880ad }}
+        registry: https://index.docker.io/v1/
+        username: ${{ secrets.AzureAppService_ContainerUsername_809c3d83055f4243898544e740059170 }}
+        password: ${{ secrets.AzureAppService_ContainerPassword_c8b0a0d98afc41ddb68a9ac232a82c37 }}
 
     - name: Build and push container image to registry
       uses: docker/build-push-action@v3
       with:
         push: true
-        tags: mcr.microsoft.com/${{ secrets.AzureAppService_ContainerUsername_ea93528504874be69c1d3312d2ab56e7 }}/appsvc/staticsite:${{ github.sha }}
+        tags: index.docker.io/${{ secrets.AzureAppService_ContainerUsername_809c3d83055f4243898544e740059170 }}/inference:${{ github.sha }}
         file: ./Dockerfile
 
   deploy:
@@ -47,5 +47,5 @@ jobs:
       with:
         app-name: 'mlinprod-obligatorio'
         slot-name: 'production'
-        publish-profile: ${{ secrets.AzureAppService_PublishProfile_30f3b23e13474db091a59a9962aa75ff }}
-        images: 'mcr.microsoft.com/${{ secrets.AzureAppService_ContainerUsername_ea93528504874be69c1d3312d2ab56e7 }}/appsvc/staticsite:${{ github.sha }}'
+        publish-profile: ${{ secrets.AzureAppService_PublishProfile_7f73e0a2cada4b6b9961da4c1a0f86dd }}
+        images: 'index.docker.io/${{ secrets.AzureAppService_ContainerUsername_809c3d83055f4243898544e740059170 }}/inference:${{ github.sha }}'
