--- a/.github/workflows/main_mlinprodobli.yml
+++ b/.github/workflows/main_mlinprodobli.yml
@@ -16,6 +16,9 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - name: Checkout LFS objects
+    - run: git lfs pull
+
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
