--- a/.github/workflows/main_mlinprodobli.yml
+++ b/.github/workflows/main_mlinprodobli.yml
@@ -17,7 +17,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Checkout LFS objects
-    - run: git lfs pull
+      run: git lfs pull
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
