--- a/.github/workflows/main_mlinprodobli.yml
+++ b/.github/workflows/main_mlinprodobli.yml
@@ -15,9 +15,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+      with:
+        lfs: true
 
     - name: Checkout LFS objects
-      run: git lfs pull
+      run: git lfs checkout
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
